@@ -1,3 +1,8 @@
+2005-04-24  Ralf Corsepius  <ralf.corsepius@rtems.org>
+
+	PR target/17824
+	* config/c4x/c4x.h (ASM_PROG, LD_PROG): Remove.
+
 2005-04-24  Richard Henderson  <rth@redhat.com>
 
         PR target/21101
